# PFSimple

./: .gitignore  CMakeLists.txt  KFParticleSimpleConfig.cmake.in  KFParticleSimpleLinkDef.h  README.md  _formulas.tex  _formulas_dark.tex  annotated.html  classes.html  dir_650ee533936399e683a30afb9473a469.html  dir_650ee533936399e683a30afb9473a469_dep.map  dir_650ee533936399e683a30afb9473a469_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9fd9726e575723de4efb0e8da92520d9.html  doxygen_crawl.html  filelist_example.txt  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherit_graph_8.map  (+2 more)
.github/workflows/: clang.yml  cmake.yml
AnalysisTreeInterface/: CMakeLists.txt  ConverterIn.cpp  ConverterIn.h  ConverterOut.cpp  ConverterOut.h  KFManLinkDef.h  PFTaskManager.cpp  PFTaskManager.h  PfSimpleTask.cpp  PfSimpleTask.h  main.cxx  test.cpp
AnalysisTreeInterface/old/: InConverter.cxx  InConverter.h  Manager.cxx  Manager.h  OutConverter.cxx  OutConverter.h
Interface/: CMakeLists.txt  CutsContainer.cxx  CutsContainer.h  DecayContainer.cxx  DecayContainer.h  InputContainer.cxx  InputContainer.h  KFParticleInterfaceLinkDef.h  OutputContainer.cxx  OutputContainer.h
KFIdeal/: check_magnetic_field.C  lambda_ideal_check.C  lambda_ideal_finder.C  lambda_pfmatch_check.C  lambda_pfsimple_check.C  lambda_qa.C  rootlogon.C
KFSimple/: CMakeLists.txt  Constants.h  DaughterCuts.hpp  Decay.hpp  KFSimpleLinkDef.h  MotherCuts.cpp  MotherCuts.hpp  SimpleFinder.cpp  SimpleFinder.cxx  SimpleFinder.h  SimpleFinder.hpp  SimpleFinderNew.cpp  SimpleFinderNew.hpp
at_interface/: CMakeLists.txt  ConverterIn.cpp  ConverterIn.hpp  ConverterOut.cpp  ConverterOut.hpp  ConverterOutTree.cpp  ConverterOutTree.hpp  KFManLinkDef.h  PFSimpleTask.cpp  PFSimpleTask.hpp  PfSimpleTask.cpp  PfSimpleTask.hpp  main.cpp  main2.cpp  main3.cpp  main_json.cpp  parfile2.txt  parfile2_add.txt  parfile2_add_omega.txt  parfile2_add_xi_cascade.txt  parfile2_lambda_cascade_pidmode1.txt  parfile2_lambda_pidmode0.txt  parfile2_lambda_pidmode1_optcut.txt  parfile2_lambda_pidmode2.txt  parfile3.txt  parfile3_H3L_pidmode1.txt  parfile3_He5L_cascade_pidmode1.txt  parfile3_add.txt  parfile3_add_He6LL.txt  parfile3_add_omegastar.txt
at_interface/configs/: config_H3L1.json  config_H3L2.json  config_H3L_pidmode1.json  config_H3L_pidmode4.json  config_He5L.json  config_He5L_pidmode1.json  config_He6LL_pidmode1.json  config_antilambda_ml.json  config_dummy.json  config_lambda.json  config_lambda2.json  config_lambda3.json  config_lambda4.json  config_lambda_k0short_pidmode1.json  config_lambda_pidmode0.json  config_lambda_pidmode1_v1.json  config_lambda_pidmode1_v2.json  config_lambda_pidmode1_v3.json  config_lambda_pidmode2.json  config_omega.json  config_omega_pidmode1.json  config_omegastar.json  config_omegastar_pidmode1.json  config_pn_into_p_L_K0s.json  config_pp_into_p_Sigma_K0.json  config_template.json  config_xi.json  config_xi_pidmode1.json
at_interface/example_parfiles/: parfile2.txt  parfile2_add.txt  parfile2_add_omega.txt  parfile2_add_xi.txt  parfile2_add_xi_cascade.txt  parfile2_lambda_cascade_pidmode1.txt  parfile2_lambda_pidmode0.txt  parfile2_lambda_pidmode1_optcut.txt  parfile2_lambda_pidmode2.txt  parfile3.txt  parfile3_H3L_pidmode4.txt  parfile3_He5L_cascade_pidmode1.txt  parfile3_add_He6LL.txt  parfile3_add_omegastar.txt
cmake/: AnalysisTree.cmake  KFParticle.cmake  PFSimpleConfig.sh.in  TestsSetupPFSimple.cmake
cmake_modules/: AnalysisTree.cmake  KFParticle.cmake  Vc.cmake
d0/d0f/: classSimpleFinder.html
d0/d57/: classConverterOut.html
d0/d65/: classConverterIn.html
d0/def/: NonLinearCutBase_8hpp_source.html
d1/d03/: classDaughter-members.html
d1/d60/: structSelectionValues__coll__graph.map  structSelectionValues__coll__graph.md5
d1/ddc/: classMother.html
d3/d4b/: structSelectionValues-members.html
d4/d19/: classConverterOut-members.html
d4/d51/: classPFSimpleTask__coll__graph.map  classPFSimpleTask__coll__graph.md5
d4/dc6/: classConverterIn__coll__graph.map  classConverterIn__coll__graph.md5
d4/def/: classOutputContainer__coll__graph.map  classOutputContainer__coll__graph.md5
d5/d38/: classDecay-members.html
d5/d46/: classMother-members.html
d5/da2/: classSimpleFinder-members.html
d6/d58/: classDecay__coll__graph.map  classDecay__coll__graph.md5
d6/dd7/: OutputContainer_8hpp_source.html
d6/de9/: Constants_8hpp_source.html
d7/da0/: classInputContainer-members.html
d7/dd0/: classDaughter__coll__graph.map  classDaughter__coll__graph.md5
d8/d14/: classConverterOutTree.html
d8/d4a/: ConverterOutTree_8hpp_source.html
d8/d94/: classConverterOutTree__inherit__graph.map  classConverterOutTree__inherit__graph.md5
d8/da4/: classInputContainer.html
docs/: Doxyfile
pf_ideal/: check_magnetic_field.C  lambda_ideal_finder.C  rootlogon.C
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
src/: CMakeLists.txt  Constants.hpp  Daughter.cpp  Daughter.hpp  Daughter.test.cpp  DaughterCuts.cpp  DaughterCuts.hpp  Decay.cpp  Decay.hpp  Decay.test.cpp  Mother.cpp  Mother.hpp  Mother.test.cpp  MotherCuts.hpp  NonLinearCutBase.cpp  NonLinearCutBase.hpp  SimpleFinder.cpp  SimpleFinder.hpp  SimpleFinderNew.cpp  SimpleFinderNew.hpp
src/interface/: CMakeLists.txt  InputContainer.cpp  InputContainer.hpp  InputContainer.test.cpp  OutputContainer.cpp  OutputContainer.hpp  OutputContainer.test.cpp
(+40 files in other folders)
